--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -57,7 +57,7 @@
             width: 100%;
             max-width: (630/16rem);
             /* chnages to auto at tablet */
-            height: 50vw;
+            height: 900vw;
             /* removed at tablet */
             max-height: (400/16rem);
             /* clips img tag corners */
